added new scene to render objects from db (still in beginning stages), change scene and render positions as cubes from click on marker on map

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -520,6 +520,9 @@
      <Compile Include="Assets\Scripts\PostCreation\PullLongLat.cs" />
      <Compile Include="Assets\Scripts\PostCreation\SubmitCreationToDB.cs" />
      <Compile Include="Assets\Scripts\RaycastManager.cs" />
+     <Compile Include="Assets\Scripts\RenderModelAndGuessScene\DataForRender.cs" />
+     <Compile Include="Assets\Scripts\RenderModelAndGuessScene\DisplayModelFromDB.cs" />
+     <Compile Include="Assets\Scripts\RenderModelAndGuessScene\PullDataFromCreationsRender.cs" />
      <Compile Include="Assets\Scripts\Stroke.cs" />
      <Compile Include="Assets\Scripts\TargetManager.cs" />
      <Compile Include="Assets\ScrollAndPinch.cs" />
