Add posting of color of trail/shapes

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -517,6 +517,7 @@
      <Compile Include="Assets\Scripts\LoginRegisterScripts\Registration.cs" />
      <Compile Include="Assets\Scripts\PointAtCamera.cs" />
      <Compile Include="Assets\Scripts\PostCreation\PullLongLat.cs" />
+     <Compile Include="Assets\Scripts\PostCreation\ReturnToMap.cs" />
      <Compile Include="Assets\Scripts\PostCreation\SubmitCreationToDB.cs" />
      <Compile Include="Assets\Scripts\RaycastManager.cs" />
      <Compile Include="Assets\Scripts\RenderModelAndGuessScene\DataForRender.cs" />
