add basic functionality ffor changing brushes, when user posts a creation to the db, php script deletes that word from the word array

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -540,6 +540,7 @@
      <Compile Include="Assets\MapboxAR\Unity\Ar\SnapAlignmentStrategy.cs" />
      <Compile Include="Assets\MapboxAR\Unity\Ar\Utilities\PlotRoute.cs" />
      <Compile Include="Assets\Paintable.cs" />
+     <Compile Include="Assets\Scripts\ChangeStroke.cs" />
      <Compile Include="Assets\Scripts\DragObject.cs" />
      <Compile Include="Assets\Scripts\Draw.cs" />
      <Compile Include="Assets\Scripts\FlyCamera.cs" />
