changes to UI, asynchronoonousfunctions changed, problem with the rotating marker, changes to map style, delete word from DB if posted.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -564,6 +564,7 @@
      <Compile Include="Assets\Scripts\RenderModelAndGuessScene\PullDataFromCreationsRender.cs" />
      <Compile Include="Assets\Scripts\Stroke.cs" />
      <Compile Include="Assets\Scripts\TargetManager.cs" />
+     <Compile Include="Assets\Scripts\ToggleBrushesStore\ToggleBrushesStore.cs" />
      <Compile Include="Assets\ScrollAndPinch.cs" />
      <Compile Include="Assets\TurnTheGameOn\Arrow WayPointer\DemoContent\CharacterController\Scripts\CharacterControllerThirdPerson.cs" />
      <Compile Include="Assets\TurnTheGameOn\Arrow WayPointer\DemoContent\CharacterController\Scripts\SmoothFollow.cs" />
