--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -40,6 +40,7 @@
      <Compile Include="Assets\AnotherColorPicker\Scripts\ColorPaletteController.cs" />
      <Compile Include="Assets\CameraController.cs" />
      <Compile Include="Assets\CircleDraw.cs" />
+     <Compile Include="Assets\FeatheredPlane\ARFeatheredPlaneMeshVisualizer.cs" />
      <Compile Include="Assets\GoogleARCore\Examples\ComputerVision\Scripts\ComputerVisionController.cs" />
      <Compile Include="Assets\GoogleARCore\Examples\ComputerVision\Scripts\EdgeDetector.cs" />
      <Compile Include="Assets\GoogleARCore\Examples\ComputerVision\Scripts\TextureReader.cs" />
@@ -685,6 +686,7 @@
      <None Include="Assets\Shaders\DecalShaderNormalsOnly.shader" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Masking.shader" />
      <None Include="Assets\Mapbox\Fonts\OpenSansLic.txt" />
+     <None Include="Assets\FeatheredPlane\FeatheredPlaneShader.shader" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Mobile.shader" />
      <None Include="Assets\UnityARKitPlugin\Examples\Common\Shaders\MobileOcclusion.shader" />
